Bug 11022 - Sharepoint search doesn't show any user documents
Summary: Sharepoint search doesn't show any user documents
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.2.0rc2
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
: 11045 (view as bug list)
Depends on:
Blocks: 10077
  Show dependency treegraph
 
Reported: 2014-12-22 12:45 UTC by Arvid Requate
Modified: 2015-01-31 10:24 UTC (History)
4 users (show)

See Also:


Attachments
0001-dsdb-Add-tokenGroupsGlobalAndUniversal-tokenGroups-t.patch (21.55 KB, patch)
2014-12-22 12:45 UTC, Arvid Requate
no flags Details
Patch for v4-2-test (21.78 KB, patch)
2015-01-05 08:09 UTC, Stefan Metzmacher
garming: review+
Details
Patch for v4-1-test (21.77 KB, patch)
2015-01-05 08:10 UTC, Stefan Metzmacher
garming: review+
Details
Patch for v4-0-test (21.73 KB, patch)
2015-01-05 08:10 UTC, Stefan Metzmacher
garming: review+
Details
Patch for v4-2-test (21.96 KB, patch)
2015-01-20 08:12 UTC, Stefan Metzmacher
garming: review+
metze: review? (abartlet)
Details
Patch for v4.1 test (22.00 KB, patch)
2015-01-26 22:38 UTC, Garming Sam
metze: review+
Details
Patches for v4-0-test (43.18 KB, patch)
2015-01-26 22:49 UTC, Stefan Metzmacher
garming: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Arvid Requate 2014-12-22 12:45:58 UTC
Created attachment 10555 [details]
0001-dsdb-Add-tokenGroupsGlobalAndUniversal-tokenGroups-t.patch

The attached patch, developed by Garming and Andrew, adds support for the operational attributes tokenGroupsGlobalAndUniversal, tokenGroups and tokenGroupsNoGCAcceptable to Samba AD DC.

The tokenGroupsGlobalAndUniversal attribute (aka "TGGAU") is required by Sharepoint for access control during document search. Without this attribute Sharepoint search shows no results, even when a users searches for his own documents (see http://support.microsoft.com/kb/331951/en-us or http://blogs.msdn.com/b/russmax/archive/2010/01/20/whythe-tokengroupsglobalanduniversal-tggau-attribute-matters-in-sharepoint-2010.aspx ).

We received positive feedback about the effectiveness of the patch from an independent test site. Please review.
Comment 2 Stefan Metzmacher 2015-01-05 08:09:43 UTC
Created attachment 10573 [details]
Patch for v4-2-test
Comment 3 Stefan Metzmacher 2015-01-05 08:10:15 UTC
Created attachment 10574 [details]
Patch for v4-1-test
Comment 4 Stefan Metzmacher 2015-01-05 08:10:52 UTC
Created attachment 10575 [details]
Patch for v4-0-test
Comment 5 Andrew Bartlett 2015-01-11 18:55:20 UTC
*** Bug 11045 has been marked as a duplicate of this bug. ***
Comment 6 Andrew Bartlett 2015-01-11 19:55:57 UTC
*** Bug 11045 has been marked as a duplicate of this bug. ***
Comment 7 Karolin Seeger 2015-01-14 20:32:43 UTC
Pushed to autobuild-v4-[0|1|2]-test.
Comment 8 Karolin Seeger 2015-01-15 08:35:09 UTC
Patch seems to break autobuild:

Traceback (most recent call last):
  File "/memdisk/kseeger/a41/b21972/samba/source4/dsdb/tests/python/token_group.py", line 500, in <module>
    if not runner.run(unittest.makeSuite(TokenTest)).wasSuccessful():
NameError: name 'TokenTest' is not defined
command: python /memdisk/kseeger/a41/b21972/samba/source4/dsdb/tests/python/token_group.py $SERVER -U"$USERNAME%$PASSWORD" --workgroup=$DOMAIN 2>&1 | /memdisk/kseeger/a41/b21972/samba/selftest/filter-subunit --fail-on-empty --prefix="samba4.tokengroups.python(dc)." --suffix="(dc:local)"
expanded command: python /memdisk/kseeger/a41/b21972/samba/source4/dsdb/tests/python/token_group.py localdc -U"Administrator%locDCpass1" --workgroup=SAMBADOMAIN 2>&1 | /memdisk/kseeger/a41/b21972/samba/selftest/filter-subunit --fail-on-empty --prefix="samba4.tokengroups.python(dc)." --suffix="(dc:local)"
ERROR: Testsuite[samba4.tokengroups.python(dc)]
REASON: Exit code was 1

Re-trying without this patch now.
Comment 9 Stefan Metzmacher 2015-01-20 08:12:29 UTC
Created attachment 10636 [details]
Patch for v4-2-test

This should pass autobuild in v4-2-test now.
Comment 10 Garming Sam 2015-01-23 04:52:27 UTC
Comment on attachment 10636 [details]
Patch for v4-2-test

The other two patches also appear to need the change to running both StaticTokenTest and DynamicTokenTest.
Comment 11 Stefan Metzmacher 2015-01-23 07:33:54 UTC
Pushed to autobuild-v4-2-test...
Comment 12 Karolin Seeger 2015-01-24 20:41:24 UTC
Pushed to v4-2-test.
Closing out bug report.

Thanks!
Comment 13 Karolin Seeger 2015-01-26 19:53:50 UTC
Re-opening and assigning to Garming to provide updated fixes for v4-1-test and v4-0-test.
Comment 14 Garming Sam 2015-01-26 22:38:42 UTC
Created attachment 10667 [details]
Patch for v4.1 test

Passes the samba4.tokengroups.python(dc), so there should be no problem with autobuild.
Comment 15 Stefan Metzmacher 2015-01-26 22:49:54 UTC
Created attachment 10668 [details]
Patches for v4-0-test
Comment 16 Karolin Seeger 2015-01-29 20:14:44 UTC
Pushed to autobuild-v4-[0|1]-test.
Comment 17 Stefan Metzmacher 2015-01-31 10:24:58 UTC
Pushed to v4-[0|1]-test.